# text2sql

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  developer_notes.md  getting_started.md
examples/: text2sql_demo.py
examples/data/: sample_schema.sql
scripts/: inspect_sql_query.py  run_demo.py
src/text2sql/: __init__.py  core.py
src/text2sql/agents/: __init__.py  agent_tools.py  flow.py  langgraph_config.py
src/text2sql/config/: config.yaml
src/text2sql/database/: table_schemas.py  toy_data.db  toy_data.py
src/text2sql/models/: llm_models.py
src/text2sql/retrieval/: __init__.py  llama_index_connector.py
tests/: test_core.py  test_imports.py  test_llama_connector.py
